update swagger && set utilities controller get data in cache with key :money_with_wings:
